# litemerge-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  parse_curl.py  pyproject.toml  requirements.txt  trail.py  triage_agent.py
.github/workflows/: ci.yml  docker-publish.yml
CLAUDE/: phase_3_implementation.md
api/: dependencies.py  main.py  middleware.py
api/routes/: __init__.py  export.py  findings.py  health.py  projects.py  reports.py  runs.py
api/schemas/: findings.py  projects.py  reports.py  runs.py
caller/: __init__.py  agent_caller.py
core/: config.py  crypto.py  security.py
db/: migrations.py  mongodb.py
db/versions/: v0001_init_settings.py  v0002_projects_and_api_keys.py  (+2 more)
evaluation/: detector.py  engine.py
kb/: __init__.py  reader.py  writer.py
llm/: __init__.py  cache.py  caller.py  gemini_cache_manager.py  models.py
personas/: companies_overview.md  engine.py  kb_filter.py  loader.py  master_prompt.py  overview.md  run_simulation.py
simulation/: agent_caller.py  runner.py  scrubbing.py  session.py
tests/: conftest.py  test_agent_caller.py  test_crypto.py  test_directline_caller.py  test_evaluation_detector.py  test_evaluation_engine.py  test_health.py  test_kb_reader.py  test_kb_writer.py  test_llm_cache.py  test_migrations.py  test_openapi_security.py  test_persona_engine.py  test_persona_loader.py  test_preflight.py  test_projects_schema.py  test_reports.py  test_scrubbing.py  test_simulation_agent_caller.py  test_simulation_runner.py
worker/: celery_app.py  tasks.py
(+14 files in other folders)
